kubernetes/log-output/manifests-GKE/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-output
  name: log-output-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: eranikus424/log-output
          imagePullPolicy: Always
          volumeMounts:
            - name: log-output-volume
              mountPath: /usr/src/app/logs
            - name: config
              mountPath: /usr/src/app/config
              readOnly: true
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
        - name: timestamp-generator
          image: eranikus424/timestamp-generator
          imagePullPolicy: Always
          volumeMounts:
            - name: log-output-volume
              mountPath: /usr/src/app/logs
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: log-output-volume
          persistentVolumeClaim:
            claimName: log-output-pvc
        - name: config
          configMap:
            name: log-output-configmap
            items:
              - key: information.txt
                path: information.txt

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-output
  name: ping-pong-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: eranikus424/ping-pong
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
