kubernetes/log-output/manifests-GKE/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: log-output
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ['ReadWriteOnce']
        # storageClassName: local-path
        resources:
          requests:
            storage: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  namespace: log-output
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgres
