kubernetes/log-output/manifests-GKE/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: log-output
  name: log-output-svc
spec:
  type: LoadBalancer
  selector:
    app: log-output
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  namespace: log-output
  name: ping-pong-svc
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
